--- a/Neutral/templates/foodreco.html
+++ b/Neutral/templates/foodreco.html
@@ -1,9 +1,8 @@
-{% extends "bootstrap/base.html" %}
+{% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf%}
 {% block styles %}
-{{super()}}
 <link rel="stylesheet"
-      href="{{url_for('.static', filename='foodreco.css')}}">
+href="{{url_for('.static', filename='foodreco.css')}}">
 {% endblock %}
 
 {% block content %}
