--- a/Neutral/templates/layout.html
+++ b/Neutral/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,6 +16,8 @@
     {% else %}
         <title>Neutral</title>
     {% endif %}
+    {% block styles %}
+    {% endblock %}
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-color">
@@ -24,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class = "navbar-brand" href="{{ url_for('home') }}"><img src="static/logo.png"></a>
+          <a class = "navbar-brand" href="{{ url_for('home') }}"><img src="../static/logo.png"></a>
         </li>
         <li class="nav-item">
           <a class="navbarcolor nav-link" href="{{ url_for('home') }}">Home</a>
@@ -109,7 +112,7 @@
         </div>
       </nav>
     </header>-->
-    <main role="main" class="container">
+
           <!--{% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
@@ -119,8 +122,8 @@
               {% endfor %}
             {% endif %}
           {% endwith %}-->
-          {% block content %}{% endblock %}
-    </main>
+    {% block content %}{% endblock %}
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
