--- a/Neutral/templates/searchFood.html
+++ b/Neutral/templates/searchFood.html
@@ -1,4 +1,4 @@
-{% extends "bootstrap/base.html" %}
+{% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf%}
 
 {% block styles %}
@@ -23,7 +23,7 @@
         {% if foodList %}
         {% for food in foodList %}
         <div class="row">
-            <div class="results">
+            <div class="results container-fluid">
             <div class="col-12">
                 <table class="table">
         <thead>
