--- a/Neutral/templates/layout.html
+++ b/Neutral/templates/layout.html
@@ -22,10 +22,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class = "navbar-brand" href="{{ url_for('home') }}"><img src="static/logo.png"></a>
-        </li>
+      <div class="nav-item">
+        <a class = "navbar-brand" href="{{ url_for('home') }}"><img src="static/logo.png"></a>
+      </div>
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="navbarcolor nav-link" href="{{ url_for('home') }}">Home</a>
         </li>
