--- a/Neutral/templates/addFoodRecord.html
+++ b/Neutral/templates/addFoodRecord.html
@@ -1,17 +1,19 @@
-{% extends "bootstrap/base.html" %}
+{% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf%}
 
 
 {% block styles %}
-{{super()}}
 <meta charset="utf-8">
         <title>Add Food</title>
-        <link rel="stylesheet"
-        href="{{url_for('.static', filename='search.css')}}">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+   
+<link rel="stylesheet" href="{{url_for('static', filename='search.css')}}">
 {% endblock %}
 
 {% block content %}
-
+<div class="container">
 <!-- Quick Add Modal -->
 <div class="modal fade" id="quickaddmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -86,7 +88,7 @@
             </div>
         </div>
         
-        <div class="row first-row">
+        <div class="row">
             <form method="POST" action=""  class="main-form">
             <dl class="col-md-10 col-lg-10">
                 {{ form.csrf_token }}
@@ -99,7 +101,7 @@
         {% if foodList %}
         {% for food in foodList %}
             <div class="row">
-                <div class="results">
+                <div class="results container-fluid">
                 <div class="col-12">
                     <table class="table">
                 <thead>
@@ -137,10 +139,7 @@
     </div>
 </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script>
+     <script>
         $('.table tbody').on('click','.btn',function(){
             var food = $(this).closest('tr');
             var food_name = food.find('th').text();
@@ -179,9 +178,7 @@
     </script>
 
    
-
-
-
+</div>
 
 {% endblock %}
 
