added error msg for modals

--- a/Neutral/templates/addFoodRecord.html
+++ b/Neutral/templates/addFoodRecord.html
@@ -8,7 +8,8 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-   
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 <link rel="stylesheet" href="{{url_for('static', filename='search.css')}}">
 {% endblock %}
 
@@ -157,6 +158,57 @@
             var data = "/addfoodprocess/"+food_id+"/"+food_name+"/"+food_calories+"/"+food_carb+"/"+food_fat+"/"+food_saturatedfat+"/"+food_protein+"/"+food_sodium+"/"+food_fibres+"/"+food_meal
             window.location.replace(data);
         })
+    </script>
+    <script src="https://cdn.rawgit.com/PascaleBeier/bootstrap-validate/v2.2.0/dist/bootstrap-validate.js" ></script>
+    <script>
+        bootstrapValidate('#name','alphanumeric:Please input only alphanumeric characters!', function (isValid) {
+        if (isValid) {
+        } else {
+            alert('Element is invalid');
+        }
+        });
+        bootstrapValidate('#calories','numeric:Please input a valid number!', function (isValid) {
+        if (isValid) {
+        } else {
+            alert('Element is invalid');
+        }
+        });
+        bootstrapValidate('#carb','numeric:Please input a valid number!', function (isValid) {
+        if (isValid) {
+        } else {
+            alert('Element is invalid');
+        }
+        });
+        bootstrapValidate('#fat','numeric:Please input a valid number!', function (isValid) {
+        if (isValid) {
+        } else {
+            alert('Element is invalid');
+        }
+        });
+        bootstrapValidate('#sat','numeric:Please input a valid number!', function (isValid) {
+        if (isValid) {
+        } else {
+            alert('Element is invalid');
+        }
+        });
+        bootstrapValidate('#protein','numeric:Please input a valid number!', function (isValid) {
+        if (isValid) {
+        } else {
+            alert('Element is invalid');
+        }
+        });
+        bootstrapValidate('#sodium','numeric:Please input a valid number!', function (isValid) {
+        if (isValid) {
+        } else {
+            alert('Element is invalid');
+        }
+        });
+        bootstrapValidate('#fibres','numeric:Please input a valid number!', function (isValid) {
+        if (isValid) {
+        } else {
+            alert('Element is invalid');
+        }
+        });
     </script>
     <script>
         $('#savechanges').on('click', function(){
