--- a/Neutral/templates/addFoodRecord.html
+++ b/Neutral/templates/addFoodRecord.html
@@ -72,7 +72,7 @@
             </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-primary anybutton" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary anybutton savechangesbtn" id="savechanges">Save changes</button>
+            <button type="submit" class="btn btn-primary anybutton savechangesbtn" id="savechanges">Add Food</button>
         </div>
         
     </div>
