--- a/Neutral/templates/foodreco.html
+++ b/Neutral/templates/foodreco.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf%}
 {% block styles %}
 <link rel="stylesheet"
-href="{{url_for('.static', filename='foodreco.css')}}">
+href="{{url_for('.static', filename='styles/foodreco.css')}}">
 {% endblock %}
 
 {% block content %}
