--- a/Neutral/templates/foodrecoresults.html
+++ b/Neutral/templates/foodrecoresults.html
@@ -3,7 +3,7 @@
 {% block styles %}
 {{super()}}
 <link rel="stylesheet"
-      href="{{url_for('.static', filename='foodreco.css')}}">
+      href="{{url_for('.static', filename='static/styles/foodreco.css')}}">
 {% endblock %}
 
 {% block content %}
