--- a/Neutral/static/styles/register.css
+++ b/Neutral/static/styles/register.css
@@ -2,7 +2,7 @@
 
 body {
     color: #333333;
-    background: url("background.jpg") no-repeat center fixed;
+    background: url("../images/background.jpg") no-repeat center fixed;
     background-size: cover;
     background-color: black;
     font-family: sans-serif;
