--- a/Neutral/templates/addFoodRecord.html
+++ b/Neutral/templates/addFoodRecord.html
@@ -95,7 +95,7 @@
                 {{ form.csrf_token }}
                 {{ wtf.form_field(form.foodname) }}
             </dl>
-            <input class="searchbutton" type="image" src="../static/search.png" width="20" height="20" alt="Submit" />
+            <input class="searchbutton" type="image" src="../static/images/search.png" width="20" height="20" alt="Submit" />
             <button class="btn btn-primary anybutton" id = 'quickadd' style = "width:110px;"><span class="glyphicon glyphicon-plus-sign"></span> Quick Add </button></td>
             </form>
         </div>
