--- a/Neutral/templates/diary.html
+++ b/Neutral/templates/diary.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
   <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>   
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="static/diary.css">
+  <link rel="stylesheet" type="text/css" href="static/styles/diary.css">
 {% endblock %}
 
 {% block content %}
