--- a/Neutral/templates/login.html
+++ b/Neutral/templates/login.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login.css') }}">
 
     {% if title %}
         <title>Neutral - {{ title }}</title>
@@ -21,7 +21,7 @@
                 <div class="content-section loginform">
                     <form method="POST" action="">
                         {{ form.hidden_tag() }}
-                        <img src="static/avatar.png" class="avatar">
+                        <img src="static/images/avatar.png" class="avatar">
                         <fieldset class="form-group">
                             <legend class="border-bottom border-dark mb-1">Log In</legend>
                             {% with messages = get_flashed_messages(with_categories=true) %}
@@ -60,7 +60,7 @@
                                 {% endif %}
                             </div>
                             <small>
-                                <a class="link-color" href="{{ url_for('reset_request') }}">Forgot Password?</a>
+                                <a class="link-color" href="{{ url_for('reset_request') }}"><u>Forgot Password?</u></a>
                             </small>
                             <div class="form-check mt-2">
                                 {{ form.remember(class="form-check-input") }}
@@ -73,98 +73,9 @@
                     </form>
                     <div class="border-top border-dark pt-3">
                         <small>
-                            Need An Account?<a class="ml-2 link-color" href="{{ url_for('register') }}">Sign Up Now!</a>
+                            Need An Account?<a class="ml-2 link-color" href="{{ url_for('register') }}"><u>Sign Up Now!</u></a>
                         </small>
                     </div>
     </div>
 </body>
 </html>
-
-
-
-
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-<script src="static/testchart.js"></script>
-<canvas id="chDonut1"></canvas>-->
-
-<!--<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Login</title>
-        <link rel="stylesheet" href="static/login.css">
-        <body>
-            <div class="title"> 
-                <img src="static/background-black.png" class="background-black">
-                
-                <img class="logo" src="static/logo.png">-->
-
-                <!--<h1>NEUTRAL</h1>-->
-                <!--<p>NEUTRAL is a comprehensive food and fitness manager<br>that makes it easy for you to track your food and exercise<br> as well as maintain a healthy nutritional balance.</p>
-                <h2>Food, Fitness and Fun, Let’s Get It Done!</h2>
-            </div>
-            {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                    {% for category, message in messages %}
-                        <div class="alert alert-{{ category }}">
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
-            <div class="loginbox">
-                <form method = "POST" action="">
-                    {{ form.hidden_tag() }}
-                    <img src="static/avatar.png" class="avatar">
-                        <h1>Login</h1>
-                        <div class="form-group">
-                            {{ form.email.label(class="form-control-label")}}
-                            {% if form.email.errors %}
-                                {{ form.email(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.email.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.email(class="form-control form-control-lg", placeholder="Enter your email")}}
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.password.label(class="form-control-label")}}
-                            {% if form.password.errors %}
-                                {{ form.password(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.email.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.password(class="form-control form-control-lg", placeholder="Enter your password")}}
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            <small class="text-muted ml-4">
-                                <a href="{{ url_for('reset_request') }}">Forget Password?</a>
-                            </small>
-                            <div class="form-check">
-                                {{ form.remember(class="form-check-input") }} {{ form.remember.label(class="form-check-label") }}
-                            </div>
-                            {{ form.submit(class="btn btn-outline-info") }}
-                        </div>
-                        <div class="need-account">
-                            <small class="text-muted">
-                                Need an Account? <a class=" ml-5" href="{{ url_for('register') }}">Sign Up Here!</a>
-                            </small>
-                        </div> 
-                </form>               
-            </div>           
-        </body>
-</html>-->
-
-    
-
