--- a/Neutral/templates/register.html
+++ b/Neutral/templates/register.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='register.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/register.css') }}">
 
     {% if title %}
         <title>Neutral - {{ title }}</title>
@@ -16,23 +16,23 @@
         <title>Neutral</title>
     {% endif %}
 </head>
+{% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+            {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endwith %}
 <body>
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
-          {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-              {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
-                  {{ message }}
-                </div>
-              {% endfor %}
-            {% endif %}
-          {% endwith %}
           <div class="content-section">
             <form method="POST" action="">
                 {{ form.hidden_tag() }}
-                <img src="static/avatar.png" class="avatar">
+                <img src="static/images/avatar.png" class="avatar">
                 <fieldset class="form-group">
                     <legend class="border-bottom border-dark mb-4">Create An Account</legend>
                     <div class="form-group">
@@ -150,7 +150,7 @@
             </form>
             <div class="border-dark border-top pt-3">
                 <small>
-                    Already Have An Account? <a class="ml-2 link-color" href="{{ url_for('login') }}">Sign In Here</a>
+                    Already Have An Account? <a class="ml-2 link-color" href="{{ url_for('login') }}"><u>Sign In Here</u></a>
                 </small>
             </div>
         </div>
@@ -159,158 +159,5 @@
     </main>
 </body>
 </html>
-
-
-<!--<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Register</title>
-        <link rel="stylesheet" href="static/register.css">
-        <body>
-            <div class="loginbox">
-                <form method = "POST" action="">
-                    {{ form.hidden_tag() }}
-                    <img src="static/avatar.png" class="avatar">
-                        <h1>Create Account</h1>
-                        <div class="form-group">
-                            {{ form.username.label(class="form-control-label")}}
-                            {% if form.username.errors %}
-                                {{ form.username(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.username.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.username(class="form-control form-control-lg", placeholder="Enter username")}}
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.age.label(class="form-control-label")}}
-                            {% if form.age.errors %}
-                                {{ form.age(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.age.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.age(class="form-control form-control-lg", placeholder="Enter your age")}}
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.height.label(class="form-control-label")}} 
-                            {% if form.height.errors %}
-                                {{ form.height(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.height.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.height(class="form-control form-control-lg", placeholder="Enter your height")}}
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.weight.label(class="form-control-label")}} 
-                            {% if form.weight.errors %}
-                                {{ form.weight(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.weight.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.weight(class="form-control form-control-lg", placeholder="Enter your weight")}} 
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.email.label(class="form-control-label")}}
-                            {% if form.email.errors %}
-                                {{ form.email(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.email.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.email(class="form-control form-control-lg", placeholder="Enter your email")}}
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.password.label(class="form-control-label")}} 
-                            {% if form.password.errors %}
-                                {{ form.password(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.password.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.password(class="form-control form-control-lg", placeholder="Enter your password")}} 
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            {{ form.confirm_password.label(class="form-control-label")}} 
-                            {% if form.confirm_password.errors %}
-                                {{ form.confirm_password(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.confirm_password.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ form.confirm_password(class="form-control form-control-lg", placeholder="Enter password again")}} 
-                            {% endif %} 
-                        </div>
-                        <div class="form-group">
-                            <div class="healthgoal-spacing">
-                                {{ form.healthGoal.label(class="form_control_label")}}
-                            </div>
-                            {% if form.healthGoal.errors %}
-                                {{ form.healthGoal(class="form-control form-control-lg is-invalid")}}
-                                <div class='invalid-feedback'>
-                                    {% for error in form.healthGoal.errors %}
-                                        <span>
-                                            {{ error }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                <div class="drop-down-spacing">
-                                    {{ form.healthGoal(class="form-control form-control-lg")}} -> 
-                                </div>
-                            {% endif %}
-                        </div>
-                        <div class="form-group">
-                            <div class="button-spacing">
-                                {{ form.submit(class="btn btn-outline-info") }}
-                            </div>
-                        </div>
-                        <div class="need-account">
-                            <small class="text-muted">
-                                Have an Account? <a class=" ml-5" href="{{ url_for('login') }}">Log In Here!</a>
-                            </small>
-                        </div> 
-                </form>               
-            </div>           
-        </body>
-</html>-->
-
     
 
